[package]
name = "api-whatsapp-rotator"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde_json = "1"
dotenvy = "0.15"
jsonwebtoken = "9.3.1"
log = "0.4"
tracing = "0.1"
tracing-appender = "0.2.3"

sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
actix-cors = "0.7.1"
